# autoclicker

./: CMakeLists.txt  README.md
src/: clicker.cpp  clicker.h  hooks.h  main.cpp  recorder.cpp  recorder.h  utils.cpp  utils.h
